--- a/lib/plausible_web/templates/auth/user_settings.html.eex
+++ b/lib/plausible_web/templates/auth/user_settings.html.eex
@@ -180,12 +180,12 @@
 
   <div class="my-4 border-b border-gray-300 dark:border-gray-500"></div>
 
-  <%= form_for @changeset, "/settings", [class: "max-w-sm"], fn f -> %>
+  <%= form_for @changeset, "/settings", [class: "max-w-sm plausible-event-name=event"], fn f -> %>
     <div class="col-span-4 sm:col-span-2">
         <%= label f, :theme, "Theme Selection", class: "block text-sm font-medium leading-5 text-gray-700 dark:text-gray-300" %>
         <%= select f, :theme, Plausible.Themes.options(), class: "dark:bg-gray-900  mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 dark:border-gray-500 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md dark:text-gray-100 cursor-pointer" %>
       </div>
-    <%= submit "Save", class: "button mt-4" %>
+    <%= submit "Save", class: "button mt-4", id: "submit" %>
   <% end %>
 </div>
 
